# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

module(
    name = "score_tooling",
    version = "0.0.0",
    compatibility_level = 1,
)

###############################################################################
# Core Dependencies
###############################################################################
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_python", version = "1.4.1")
bazel_dep(name = "aspect_rules_py", version = "1.4.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "aspect_rules_lint", version = "1.5.3")
bazel_dep(name = "rules_shell", version = "0.5.0")
bazel_dep(name = "rules_java", version = "8.15.1")
bazel_dep(name = "rules_rust", version = "0.61.0")
bazel_dep(name = "rules_multitool", version = "1.9.0")
bazel_dep(name = "score_rust_policies", version = "0.0.2")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")
bazel_dep(name = "flatbuffers", version = "25.9.23")

# flatbuffers depends on this transitively, but older grpc-java version
# The main problem is that there the command `bazel mod deps` is broken, which
# we want and need to support for dependant modules
bazel_dep(name = "grpc-java", version = "1.75.0.bcr.1")

###############################################################################
# CC Toolchain
###############################################################################

bazel_dep(name = "score_bazel_cpp_toolchains", version = "0.3.1", dev_dependency = True)

score_gcc = use_extension("@score_bazel_cpp_toolchains//extensions:gcc.bzl", "gcc", dev_dependency = True)
score_gcc.toolchain(
    name = "score_gcc_x86_64_toolchain",
    target_cpu = "x86_64",
    target_os = "linux",
    use_base_constraints_only = True,
    use_default_package = True,
    version = "12.2.0",
)
score_gcc.toolchain(
    name = "score_qcc_x86_64_toolchain",
    sdp_version = "8.0.0",
    target_cpu = "x86_64",
    target_os = "qnx",
    use_default_package = True,
    version = "12.2.0",
)
use_repo(
    score_gcc,
    "score_gcc_x86_64_toolchain",
    "score_qcc_x86_64_toolchain",
)

###############################################################################
# Rust Toolchain
###############################################################################
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

###############################################################################
# Rust Crates (crate_universe)
###############################################################################
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.spec(
    package = "pest",
    version = "2.8.3",
)
crate.spec(
    package = "pest_derive",
    version = "2.8.3",
)
crate.spec(
    features = ["derive"],
    package = "clap",
    version = "4.5.0",
)
crate.spec(
    package = "thiserror",
    version = "1.0.44",
)
crate.spec(
    package = "log",
    version = "0.4",
)
crate.spec(
    package = "env_logger",
    version = "0.10",
)
crate.spec(
    features = ["derive"],
    package = "serde",
    version = "1.0",
)
crate.spec(
    package = "serde_json",
    version = "1.0",
)
crate.spec(
    package = "serde_yaml",
    version = "0.9",
)
crate.spec(
    package = "once_cell",
    version = "1.19",
)
crate.spec(
    package = "flatbuffers",
    version = "25.9.23",
)
crate.from_specs()
use_repo(crate, "crates")

###############################################################################
# Python Toolchain
###############################################################################
PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)

###############################################################################
# Pip Hub
###############################################################################
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

# Main tooling pip
pip.parse(
    envsubst = ["PIP_INDEX_URL"],
    extra_pip_args = ["--index-url=${PIP_INDEX_URL:-https://pypi.org/simple/}"],
    hub_name = "pip_tooling",
    python_version = PYTHON_VERSION,
    requirements_lock = "//python_basics:requirements.txt",
)
use_repo(pip, "pip_tooling")

pip.parse(
    envsubst = ["PIP_INDEX_URL"],
    extra_pip_args = ["--index-url=${PIP_INDEX_URL:-https://pypi.org/simple/}"],
    hub_name = "pip_lobster_bazel",
    python_version = PYTHON_VERSION,
    requirements_lock = "//lobster_bazel:requirements.txt",
)
use_repo(pip, "pip_lobster_bazel")

pip.parse(
    envsubst = ["PIP_INDEX_URL"],
    extra_pip_args = ["--index-url=${PIP_INDEX_URL:-https://pypi.org/simple/}"],
    hub_name = "pip_rules_score",
    python_version = PYTHON_VERSION,
    requirements_lock = "//bazel/rules/rules_score:requirements.txt",
)
use_repo(pip, "pip_rules_score")

###############################################################################
# Multitool Hub (for ruff, pyright, actionlint, etc.)
###############################################################################
multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")

#python_basics
multitool.hub(lockfile = "python_basics/multitool.lock.json")
use_repo(multitool, "multitool")

# Ruff Hub
multitool.hub(
    hub_name = "ruff_hub",
    lockfile = "tools/ruff.lock.json",
)
use_repo(multitool, "ruff_hub")

# Actionlint Hub
multitool.hub(
    hub_name = "actionlint_hub",
    lockfile = "tools/actionlint.lock.json",
)
use_repo(multitool, "actionlint_hub")

# Shellcheck Hub
multitool.hub(
    hub_name = "shellcheck_hub",
    lockfile = "tools/shellcheck.lock.json",
)
use_repo(multitool, "shellcheck_hub")

# YAMLfmt Hub
multitool.hub(
    hub_name = "yamlfmt_hub",
    lockfile = "tools/yamlfmt.lock.json",
)
use_repo(multitool, "yamlfmt_hub")

register_toolchains(
    "//bazel/rules/rules_score:sphinx_default_toolchain",
)

###############################################################################
# Setup Googletest
###############################################################################
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)

###############################################################################
# Blueprint Maven
###############################################################################
bazel_dep(name = "rules_jvm_external", version = "6.10")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "blueprint_maven_dependencies",
    artifacts = [
        "net.sourceforge.plantuml:plantuml:1.2025.9",
    ],
    repositories = ["https://repo1.maven.org/maven2"],
)
use_repo(maven, "blueprint_maven_dependencies")

###############################################################################
# Dependencies for Manual Analysis
###############################################################################
pip.parse(
    hub_name = "manual_analysis_deps",
    python_version = PYTHON_VERSION,
    requirements_lock = "//manual_analysis:requirements.txt",
)
use_repo(pip, "manual_analysis_deps")

bazel_dep(name = "trlc", version = "0.0.0")
git_override(
    module_name = "trlc",
    commit = "8bdcb1fe6d5af97b69a293673815592371bdbb20",
    remote = "https://github.com/bmw-software-engineering/trlc.git",
)

bazel_dep(name = "lobster", version = "0.0.0")
git_override(
    module_name = "lobster",
    commit = "d528fbdec2cd72ff7967b51546fb0bd935810258",
    remote = "https://github.com/bmw-software-engineering/lobster.git",
)

###############################################################################
# Dependencies for AI Checker
###############################################################################

# Make the copilot CLI binary executable (rules_python strips +x from wheels)
pip.whl_mods(
    copy_executables = {"site-packages/copilot/bin/copilot": "copilot_cli"},
    hub_name = "ai_checker_whl_mods",
    whl_name = "github_copilot_sdk",
)
use_repo(pip, "ai_checker_whl_mods")

# Core + LangChain + GitHub Copilot SDK dependencies
pip.parse(
    hub_name = "pip_ai_checker",
    python_version = PYTHON_VERSION,
    requirements_lock = "//validation/ai_checker:requirements.txt",
    whl_modifications = {
        "@ai_checker_whl_mods//:github_copilot_sdk.json": "github-copilot-sdk",
    },
)
use_repo(pip, "pip_ai_checker")
